--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bnagebot",
   "version": "1.0.0",
   "description": "First bot",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
